force-app/main/default/objects/CPQ_Settings__c/fields/Core_Gross_Margin_Threshold_L2__c.field-meta.xml
<CustomField>
    <fullName>Core_Gross_Margin_Threshold_L2__c</fullName>
    <description>Upperbound gross margin threshold for tier 2 approval</description>
    <label>Core Gross Margin Threshold L2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>