force-app/main/default/objects/CPQ_Settings__c/fields/CPQ2_Allocation_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Allocation_Report_Id__c</fullName>
    <description>Used for identifying the allocation report that will be used for the existing services Opportunity CPQ2 screen.</description>
    <label>Allocation Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>