force-app/main/default/objects/CPQ_Settings__c/fields/CPQ2_VMI_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_VMI_Code__c</fullName>
    <label>VMI Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>