force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_DA_Out_of_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DA_Out_of_Service_Area__c</fullName>
    <label>DA Out of Service Area</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>