force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_DA_Region_2__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DA_Region_2__c</fullName>
    <label>DA Region 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>