force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_Deal_Score_Buffer__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deal_Score_Buffer__c</fullName>
    <label>Deal Score Buffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>