force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_LT1__c.field-meta.xml
<CustomField>
    <fullName>CPQ_LT1__c</fullName>
    <label>L1 Green Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>