force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_OSAZ__c.field-meta.xml
<CustomField>
    <fullName>CPQ_OSAZ__c</fullName>
    <label>Out of Service Area Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>