force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_T0__c.field-meta.xml
<CustomField>
    <fullName>CPQ_T0__c</fullName>
    <label>0 Strong Deal Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>