force-app/main/default/objects/CPQ_Settings__c/fields/CPQ_T1__c.field-meta.xml
<CustomField>
    <fullName>CPQ_T1__c</fullName>
    <label>1 Approval Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>