force-app/main/default/objects/CPQ_Settings__c/fields/DI_Core_List_Price_Needs_Approval__c.field-meta.xml
<CustomField>
    <fullName>DI_Core_List_Price_Needs_Approval__c</fullName>
    <label>DI Core List Price Needs Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>