force-app/main/default/objects/CPQ_Settings__c/fields/DI_FSA_Issue__c.field-meta.xml
<CustomField>
    <fullName>DI_FSA_Issue__c</fullName>
    <label>DI FSA Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>