force-app/main/default/objects/CPQ_Settings__c/fields/DI_Low_Margin_Found__c.field-meta.xml
<CustomField>
    <fullName>DI_Low_Margin_Found__c</fullName>
    <label>DI Low Margin Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>