force-app/main/default/objects/CPQ_Settings__c/fields/DI_Low_Ship_To_Score__c.field-meta.xml
<CustomField>
    <fullName>DI_Low_Ship_To_Score__c</fullName>
    <description>Low Deal Score</description>
    <label>DI Low Ship To Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>