force-app/main/default/objects/CPQ_Settings__c/fields/DI_Lower_than_Prev_Approved_Score__c.field-meta.xml
<CustomField>
    <fullName>DI_Lower_than_Prev_Approved_Score__c</fullName>
    <label>DI Lower than Prev Approved Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>