force-app/main/default/objects/CPQ_Settings__c/fields/DI_Nonservice_Margin__c.field-meta.xml
<CustomField>
    <fullName>DI_Nonservice_Margin__c</fullName>
    <label>DI Nonservice Margin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>