force-app/main/default/objects/CPQ_Settings__c/fields/DI_Seasonal_Order_Found__c.field-meta.xml
<CustomField>
    <fullName>DI_Seasonal_Order_Found__c</fullName>
    <label>DI Seasonal Order Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>