force-app/main/default/objects/CPQ_Settings__c/fields/Product_Search_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Search_Page_Size__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Product Search Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>